--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME='Roman Numerals Converter'
 APP_ENV=local
 APP_KEY=base64:/j2aLIlgUTnYPAWn1MydDLqivifjU4r7xZ3jfz7XQL4=
 APP_DEBUG=true
